--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "forgeX-foundation",
+  "name": "forgex-foundation",
   "compatibility_date": "2024-09-23",
   "compatibility_flags": [
     "nodejs_compat"
